--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -435,6 +435,11 @@ pre code.hljs {
 *   Index columns
 */
 .index-cols {
+	  img {
+        margin: 0;
+        border-radius: 10%;
+    }
+
     h2 {
         text-align: center;
     }
