--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -436,8 +436,8 @@ pre code.hljs {
 */
 .index-cols {
 	  img {
-        margin: 0;
-        border-radius: 10%;
+        margin: 0 !important;
+        border-radius: 10% 17%;
     }
 
     h2 {
