--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -437,7 +437,7 @@ pre code.hljs {
 .index-cols {
 	  img {
         margin: 0 !important;
-        border-radius: 10% 17%;
+        border-radius: 25px;
     }
 
     h2 {
