--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -436,7 +436,8 @@ pre code.hljs {
 */
 .index-cols {
 	  img {
-        margin: 0 !important;
+        margin: 0;
+        width: 100%;
         border-radius: 25px;
     }
 
