--- a/_includes/head.html
+++ b/_includes/head.html
@@ -79,4 +79,5 @@
   <!-- Site styles -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+	<meta name="msvalidate.01" content="F413BD464855E60015D9BF3F5D3214BF" />
 </head>
