--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <title>{% elseif page.title_override %}{{ page.title_override }}{% elseif page.title %}{{ page.title }} - Mindfulness Based Stress Reduction in Vancouver{% else %}{{ site.title }}{% endif %}</title>
+  <title>{% if page.title_override %}{{ page.title_override }}{% elseif page.title %}{{ page.title }} - Mindfulness Based Stress Reduction in Vancouver{% else %}{{ site.title }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
   {% if site.name %}
   <meta name="author" content="{{ site.name }}">
