Integrating with Stripe

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,9 +15,10 @@
         {% assign sorted_pages = site.pages | sort:"order" %}
         {% for page in sorted_pages %}
           {% if page.title and page.main_nav %}
-          <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+                <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
           {% endif %}
         {% endfor %}
+                <li class="nav-link" id="donate-button-menu"></li>
       </ul>
     </nav>
   </div>
