--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,9 +8,10 @@
       <ul class="pages">
         {% for page in site.pages %}
         {% if page.title and page.main_nav %}
-          <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
+        <li class="nav-link"><a href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
         {% endif %}
         {% endfor %}
+        <li class="nav-link" id="donate-button-footer"></li>
       </ul>
     </div>
 
