--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,4 @@
 <head>
-<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=UA-127410928-1"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'UA-127410928-1');
-</script>
-
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -79,5 +69,19 @@
   <!-- Site styles -->
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-	<meta name="msvalidate.01" content="F413BD464855E60015D9BF3F5D3214BF" />
+  <meta name="msvalidate.01" content="F413BD464855E60015D9BF3F5D3214BF" />
+
+  <link rel='stylesheet' href="/css/bundle.css?{{site.time | date: '%s%N'}}">
+
+  <script defer src="/js/bundle.js?{{site.time | date: '%s%N'}}"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-127410928-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-127410928-1');
+	</script>
 </head>
